--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "normalize.css": "^6.0.0"
   },
   "devDependencies": {
+    "autoprefixer": "^6.7.7",
     "gulp": "^3.9.1",
-    "gulp-watch": "^4.3.11"
+    "gulp-postcss": "^6.4.0",
+    "gulp-watch": "^4.3.11",
+    "postcss-nested": "^1.0.1",
+    "postcss-simple-vars": "^3.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
