--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.html",
   "dependencies": {
     "jquery": "^3.2.1",
-    "normalize.css": "^6.0.0"
+    "normalize.css": "^6.0.0",
+    "waypoints": "^4.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
