--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "jquery": "^3.2.1",
     "jquery-smooth-scroll": "^2.2.0",
+    "lazysizes": "^3.0.0",
     "normalize.css": "^6.0.0",
     "waypoints": "^4.0.1"
   },
