--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "jquery-smooth-scroll": "^2.2.0",
     "lazysizes": "^3.0.0",
     "normalize.css": "^6.0.0",
+    "picturefill": "^3.0.2",
     "waypoints": "^4.0.1"
   },
   "devDependencies": {
