--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "mano",
   "main": "index.html",
   "dependencies": {
+    "del": "^2.2.2",
     "jquery": "^3.2.1",
     "jquery-smooth-scroll": "^2.2.0",
     "lazysizes": "^3.0.0",
@@ -18,9 +19,11 @@
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.8",
     "gulp": "^3.9.1",
+    "gulp-modernizr": "^1.0.0-alpha",
     "gulp-postcss": "^6.4.0",
     "gulp-rename": "^1.2.2",
     "gulp-svg-sprite": "^1.3.1",
+    "gulp-svg2png": "^0.3.0",
     "gulp-watch": "^4.3.11",
     "postcss-hexrgba": "^0.2.1",
     "postcss-import": "^9.1.0",
