--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "index.html",
   "dependencies": {
     "del": "^2.2.2",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-rev": "^7.1.2",
+    "gulp-uglify": "^2.1.2",
+    "gulp-usemin": "^0.3.28",
     "jquery": "^3.2.1",
     "jquery-smooth-scroll": "^2.2.0",
     "lazysizes": "^3.0.0",
@@ -19,6 +23,7 @@
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.8",
     "gulp": "^3.9.1",
+    "gulp-imagemin": "^3.2.0",
     "gulp-modernizr": "^1.0.0-alpha",
     "gulp-postcss": "^6.4.0",
     "gulp-rename": "^1.2.2",
